--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,5 @@
 	"files.readonlyInclude": {
 		"**/routeTree.gen.ts": true
 	},
-	"typescript.experimental.useTsgo": true
+	// "typescript.experimental.useTsgo": true
 }
