--- a/package.json
+++ b/package.json
@@ -8,13 +8,22 @@
     "lint": "biome lint --write .",
     "format": "biome format --write ."
   },
+  "dependencies": {
+    "@tanstack/react-router": "^1.127.3",
+    "@tanstack/react-start": "^1.127.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "vite": "^7.0.4"
+  },
   "devDependencies": {
-    "@biomejs/biome": "^2.0.6",
-    "@types/bun": "latest"
+    "@biomejs/biome": "^2.1.1",
+    "@types/bun": "latest",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "peerDependencies": {
     "typescript": "^5.8.3"
   },
-  "dependencies": {},
-  "trustedDependencies": []
+  "trustedDependencies": ["@parcel/watcher"]
 }
