feat: add Tailwind CSS setup with custom styles and button component
- Created components.json for component configuration.
- Updated package.json to include Tailwind CSS and related dependencies.
- Added postcss.config.ts for PostCSS configuration.
- Implemented a reusable Button component with variants and sizes.
- Added utility function for class name merging.
- Integrated Tailwind CSS styles in app.css with custom theme and variants.
- Updated root route to include app.css for styling.
- Refactored Home component to use the new Button component.
- Configured TypeScript paths for easier imports.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,12 @@
     "verbatimModuleSyntax": false,
     "types": [
       "vite/client"
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
   }
 }
