--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "format": "biome format --write ."
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-router": "^1.127.3",
     "@tanstack/react-start": "^1.127.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
     "vite": "^7.0.4"
   },
   "devDependencies": {
@@ -20,10 +28,11 @@
     "@types/bun": "latest",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "tw-animate-css": "^1.3.5",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "peerDependencies": {
     "typescript": "^5.8.3"
   },
-  "trustedDependencies": ["@parcel/watcher"]
+  "trustedDependencies": ["@parcel/watcher", "@tailwindcss/oxide", "esbuild"]
 }
