feat: integrate Clerk for authentication and update routes
- Added @clerk/tanstack-react-start dependency for Clerk integration.
- Wrapped the Outlet component in ClerkProvider in __root.tsx for authentication context.
- Updated the title in __root.tsx to 'Finanças Simples'.
- Refactored index.tsx to use Clerk's SignedIn and SignedOut components for user authentication status.
- Removed file reading/writing logic from index.tsx and replaced it with authentication UI.
- Created a new server.ts file to handle Clerk and Start server integration.
- Updated vite.config.ts to streamline plugin configuration.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format": "biome format --write ."
   },
   "dependencies": {
+    "@clerk/tanstack-react-start": "^0.19.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-router": "^1.127.3",
@@ -34,5 +35,10 @@
   "peerDependencies": {
     "typescript": "^5.8.3"
   },
-  "trustedDependencies": ["@parcel/watcher", "@tailwindcss/oxide", "esbuild"]
+  "trustedDependencies": [
+    "@clerk/shared",
+    "@parcel/watcher",
+    "@tailwindcss/oxide",
+    "esbuild"
+  ]
 }
