--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@clerk/tanstack-react-start": "^0.19.0",
+    "@convex-dev/react-query": "^0.0.0-alpha.11",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.11",
+    "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-router": "^1.127.3",
+    "@tanstack/react-router-with-query": "^1.127.3",
     "@tanstack/react-start": "^1.127.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.25.2",
     "lucide-react": "^0.525.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
