feat: enhance UI components with new Badge and Card components; update styles and improve home page layout

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite dev",
     "build": "vite build",
     "lint": "biome lint --write .",
-    "format": "biome format --write ."
+    "format": "biome format --write .",
+    "convex:dev": "convex dev"
   },
   "dependencies": {
     "@clerk/tanstack-react-start": "^0.19.0",
