--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "simple-finance",
+  "version": "0.0.1",
   "type": "module",
   "private": true,
   "scripts": {
@@ -15,16 +16,18 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query": "^5.83.0",
-    "@tanstack/react-router": "^1.127.3",
-    "@tanstack/react-router-with-query": "^1.127.3",
-    "@tanstack/react-start": "^1.127.4",
+    "@tanstack/react-router": "^1.128.0",
+    "@tanstack/react-router-devtools": "^1.128.0",
+    "@tanstack/react-router-with-query": "^1.128.0",
+    "@tanstack/react-start": "^1.128.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "convex": "^1.25.2",
+    "convex": "^1.25.4",
     "lucide-react": "^0.525.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "vite": "^7.0.4"
